Issue #700 - Horizontal scroll in about us slider

--- a/assets/scss/pages/_standard-page.scss
+++ b/assets/scss/pages/_standard-page.scss
@@ -64,7 +64,11 @@
         }
 
         .glide__track {
-            margin-right: -100%;
+            margin-right: -19.5%;
+
+            @include breakpoint(1955px up) {
+                margin-right: 0;
+            }
         }
     }
 }
